# fastapi_tutorial

./: pyproject.toml
fastapi_tutorial/: main.py
fastapi_tutorial/api/v1/: router.py
fastapi_tutorial/api/v1/endpoints/: todo.py  todos.py
fastapi_tutorial/core/: config.py
fastapi_tutorial/crud/: todo.py
fastapi_tutorial/db/: base.py  session.py
fastapi_tutorial/models/: base.py  todo.py
fastapi_tutorial/schemas/: base.py  todo.py
fastapi_tutorial/services/: todo.py
